--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ RPC_URL=https://polygon-mumbai.g.alchemy.com/v2/7HNOhXHJ-v4yfht361D3yOa1XhiM8KmM
 PRIVATE_KEY=00
 CL_SUB_ID=907
 CL_CONSUMER_ADDRESS=0xD368fc8122aC18c9323f0767662844903666f505
+PINATA_JWT=eyJh0000
+DUMP_ENDPOINT=https://nostr-dump-worker.cf-a25.workers.dev/dump_and_pin
