--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@chainlink/env-enc": "^1.0.5",
     "@chainlink/functions-toolkit": "^0.2.6",
+    "@noble/curves": "^1.2.0",
     "base58-js": "^2.0.0",
     "dephy-proto": "^0.1.3",
-    "ethers": "^5.7.2"
+    "ethereum-cryptography": "^2.1.2"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
