--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@chainlink/env-enc": "^1.0.5",
     "@chainlink/functions-toolkit": "^0.2.6",
     "@noble/curves": "^1.2.0",
+    "@noble/secp256k1": "^2.0.0",
     "base58-js": "^2.0.0",
     "dephy-proto": "^0.1.3",
-    "ethereum-cryptography": "^2.1.2"
+    "ethereum-cryptography": "^2.1.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-swc": "^0.3.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@swc/core": "^1.3.99",
     "dotenv": "^16.3.1",
+    "protobufjs-cli": "^1.1.2",
     "rollup": "^4.5.2",
     "rollup-plugin-postprocess": "^1.0.2"
   }
