--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contract/lib/openzeppelin-contracts-upgradeable"]
 	path = contract/lib/openzeppelin-contracts-upgradeable
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+[submodule "contract/lib/chainlink"]
+	path = contract/lib/chainlink
+	url = https://github.com/smartcontractkit/chainlink
