--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dephy-chainlink-poc",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/main.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev_req": "npx rollup -c && node scripts/request.js"
@@ -10,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^0.8.0",
     "@chainlink/env-enc": "^1.0.5",
     "@chainlink/functions-toolkit": "^0.2.6",
+    "@ethersproject/bytes": "^5.7.0",
     "@noble/curves": "^1.2.0",
     "@noble/secp256k1": "^2.0.0",
     "base58-js": "^2.0.0",
