--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev_req": "npx rollup -c && node scripts/request.js"
+    "dev_req": "npx rollup -c && node scripts/request.js",
+    "update_request": "npx rollup -c && node scripts/updateRequest.js"
   },
   "author": "",
   "license": "ISC",
