--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev_req": "npx rollup -c && node scripts/request.js",
-    "update_request": "npx rollup -c && node scripts/updateRequest.js"
+    "update_request": "npx rollup -c && node scripts/updateRequest.js",
+    "update_sepolia": "npx rollup -c && node scripts/updateOnSepolia.js"
   },
   "author": "",
   "license": "ISC",
