--- a/indexer/package.json
+++ b/indexer/package.json
@@ -3,15 +3,19 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
+    "@types/bunyan": "^1.8.9",
     "bun-types": "latest",
-    "@types/bunyan": "^1.8.9"
+    "pbkit": "^0.0.62"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "base58-js": "^2.0.0",
     "bunyan": "^1.8.15",
+    "dephy-proto": "^0.1.3",
+    "ipfs-only-hash": "^4.0.0",
     "p-queue": "^7.4.1",
     "prisma": "^5.6.0",
     "redis": "^4.6.8",
