--- a/web/package.json
+++ b/web/package.json
@@ -1,1 +1,29 @@
-{}
+{
+  "name": "web",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@lens-protocol/widgets-react": "^2.1.0",
+    "@mantine/core": "^7.3.1",
+    "@mantine/hooks": "^7.3.1",
+    "@tabler/icons-react": "^2.43.0",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.11.1",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.3.0"
+  }
+}
