--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.3.1",
     "@mantine/hooks": "^7.3.1",
     "@tabler/icons-react": "^2.43.0",
+    "@vercel/postgres": "^0.5.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
@@ -24,6 +25,7 @@
     "postcss": "^8.4.32",
     "postcss-preset-mantine": "^1.11.1",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "vercel": "^32.6.1"
   }
 }
